--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "mongoose_lab",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "ts": "bun --watch index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
